welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: 'while' expected but identifier found.
    do couleur = getCouleurSol();avance()
                                 ^SlugTracking:10: error: '(' expected but ';' found.
    while (couleur == Color.green)
^